--- a/src/assets/scss/Index.scss
+++ b/src/assets/scss/Index.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
 /* ======================= Start-Color ======================= */
 :root {
   --primary: linear-gradient(
@@ -8,7 +9,7 @@
   --primary2: #7367f0 !important;
   --secondary: linear-gradient(270deg, #e5b1b3 0%, #ff4c51 100%) !important;
   --secondary2: #ff4c51 !important;
-  --tertiary: #f8f7fb !important;
+  --tertiary: #2f2b24 !important;
   --forth: #0f172a !important;
   --success: #4bb543 !important;
   --warning: #ff5722 !important;
@@ -205,22 +206,6 @@
 /* ======================= End-Border ======================= */
 
 /* ======================= Start-Font-Family ======================= */
-@font-face {
-  font-family: "poppins-semibold";
-  src: local("poppins-semibold"),
-    url("../fonts/Poppins-SemiBold.ttf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "poppins-regular";
-  src: local("poppins-regular"),
-    url("../fonts/Poppins-Regular.ttf") format("opentype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
 p,
 a,
 label,
@@ -229,7 +214,8 @@ input,
 textarea,
 select,
 button {
-  font-family: "poppins-regular" !important;
+  font-family: 'Poppins', 'Avant Garde', Arial, sans-serif;
+
 }
 h1,
 h2,
@@ -239,10 +225,9 @@ h5,
 h6,
 span,
 li {
-  font-family: "poppins-semibold" !important;
+  font-family: 'Avant Garde', Arial, sans-serif;
 }
 p {
-  letter-spacing: 1px;
   line-height: 24px !important;
   @media (max-width: 640px) {
     line-height: 20px !important;
@@ -256,7 +241,7 @@ input,
 }
 .css-b62m3t-container,
 text.CircularProgressbar-text {
-  font-family: "poppins-regular" !important;
+  font-family: 'Ubuntu', 'Poppins', sans-serif;
   font-size: 14px !important;
 }
 /* ======================= End-Font-Family ======================= */
@@ -353,13 +338,6 @@ p {
 }
 // Common Part
 
-.error-h {
-  height: 90vh !important;
-  @media (max-width: 640px) {
-    height: 60vh !important;
-  }
-}
-
 /* ======================= End-Maincss ======================= */
 
 /* ======================= Start-Pagination ======================= */
@@ -387,24 +365,47 @@ p {
 }
 /* ======================= End-Pagination ======================= */
 
+/* ======================= Start-Animatedcss ======================= */
+.bg-glass-nav {
+  background: rgba(255, 255, 255, 0.09);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.2px);
+  border: 1px solid rgba(255, 255, 255, 0.13);
+}
+.drawer .navhide {
+  position: absolute;
+  right: -50%;
+  width: 50% !important;
+  transition: all 0.3s ease-in 0s;
+}
+.drawer .navview {
+  position: absolute;
+  right: 0%;
+  width: 100% !important;
+  transition: all 0.3s ease-in 0s;
+}
+/* ======================= End-Animatedcss ======================= */
+
 /* ======================= Start-Button ======================= */
 .primarybtn {
-  background: transparent;
+  background: var(--primary) !important;
   border: 1px solid var(--primary2);
-  color: var(--primary2);
+  color: var(--white);
 }
 .primarybtn:hover {
   background: var(--primary);
   color: var(--white);
+  box-shadow: 0 1px 20px 1px var(--primary2) !important;
 }
 .secondarybtn {
-  background: transparent !important;
+  background: var(--secondary2) !important;
   border: 1px solid var(--secondary);
-  color: var(--secondary);
+  color: var(--white);
 }
 .secondarybtn:hover {
   background: var(--secondary);
   color: var(--white);
+  box-shadow: 0 1px 15px 1px var(--secondary2) !important;
 }
 .whitebtn {
   background: transparent !important;
@@ -418,45 +419,14 @@ p {
 /* ======================= End-Button ======================= */
 
 /* ======================= Start-Navbar ======================= */
-.sidebar-icon {
-  width: 40px !important;
-  height: 40px !important;
+.nav-logo{
+  width: 100px !important;
+  height: 60px !important;
 }
-.activetext {
-  color: var(--gray);
+.activetext{
+  color: var(--tertiary);
 }
-.navbar .active {
+.active{
   color: var(--primary2);
-}
-.nav-logo {
-  width: 100% !important;
-  height: 50px !important;
-  @media (min-width: 641px) and (max-width: 912px) {
-    height: 50px !important;
-  }
-  @media (max-width: 640px) {
-    height: 50px !important;
-  }
-}
-.navbar .navhide {
-  position: absolute;
-  right: -50%;
-  width: 50% !important;
-  transition: all 0.3s ease-in 0s;
-}
-.navbar .navview {
-  position: absolute;
-  right: 0%;
-  width: 100% !important;
-  transition: all 0.3s ease-in 0s;
-}
-.dropdown .dropbox{
-  display: none;
-}
-.dropdown:hover .dropbox{
-  display: block;
-}
-.dropmenu:hover{
-  background: #f4f5f6;
 }
 /* ======================= End-Navbar ======================= */
