--- a/src/assets/scss/Index.scss
+++ b/src/assets/scss/Index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@400;500;700&display=swap");
 /* ======================= Start-Color ======================= */
 :root {
   --primary: linear-gradient(
@@ -214,8 +214,7 @@ input,
 textarea,
 select,
 button {
-  font-family: 'Poppins', 'Avant Garde', Arial, sans-serif;
-
+  font-family: "Poppins", "Avant Garde", Arial, sans-serif;
 }
 h1,
 h2,
@@ -225,7 +224,7 @@ h5,
 h6,
 span,
 li {
-  font-family: 'Avant Garde', Arial, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 p {
   line-height: 24px !important;
@@ -241,7 +240,7 @@ input,
 }
 .css-b62m3t-container,
 text.CircularProgressbar-text {
-  font-family: 'Ubuntu', 'Poppins', sans-serif;
+  font-family: "Ubuntu", "Poppins", sans-serif;
   font-size: 14px !important;
 }
 /* ======================= End-Font-Family ======================= */
@@ -391,16 +390,28 @@ p {
   background: var(--primary) !important;
   border: 1px solid var(--primary2);
   color: var(--white);
+  cursor:pointer;
 }
 .primarybtn:hover {
   background: var(--primary);
   color: var(--white);
   box-shadow: 0 1px 20px 1px var(--primary2) !important;
 }
+.primary2btn {
+  background: transparent !important;
+  border: 1px solid var(--primary2) !important;
+  color: var(--primary2);
+  cursor:pointer;
+}
+.primary2btn:hover {
+  background: var(--primary) !important;
+  color: var(--white) !important;
+}
 .secondarybtn {
   background: var(--secondary2) !important;
   border: 1px solid var(--secondary);
   color: var(--white);
+  cursor:pointer;
 }
 .secondarybtn:hover {
   background: var(--secondary);
@@ -411,6 +422,7 @@ p {
   background: transparent !important;
   border: 1px solid var(--white);
   color: var(--white);
+  cursor:pointer;
 }
 .whitebtn:hover {
   background: var(--white);
@@ -419,14 +431,20 @@ p {
 /* ======================= End-Button ======================= */
 
 /* ======================= Start-Navbar ======================= */
-.nav-logo{
+.nav-logo {
   width: 100px !important;
-  height: 60px !important;
+  height: 55px !important;
 }
-.activetext{
+.activetext {
   color: var(--tertiary);
 }
-.active{
+.active {
   color: var(--primary2);
 }
 /* ======================= End-Navbar ======================= */
+
+/* ======================= Start-Components ======================= */
+.hero_img {
+  height: 400px !important;
+}
+/* ======================= End-Components ======================= */
