--- a/src/assets/scss/Index.scss
+++ b/src/assets/scss/Index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 /* ======================= Start-Color ======================= */
 :root {
   --primary: linear-gradient(
@@ -17,8 +17,8 @@
   --info: #2196f3 !important;
   --white: #fff !important;
   --card: #fff !important;
-  --dark: #000 !important;
-  --gray: #808390 !important;
+  --dark: #3a3731 !important;
+  --gray: rgb(80, 72, 72) !important;
 }
 .dark-mode {
   --primary: #74c2a8 !important;
@@ -214,7 +214,7 @@ input,
 textarea,
 select,
 button {
-  font-family: "Poppins", "Avant Garde", Arial, sans-serif;
+  font-family: "Poppins", "Ubuntu", sans-serif !important;
 }
 h1,
 h2,
@@ -224,7 +224,7 @@ h5,
 h6,
 span,
 li {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", "Ubuntu", sans-serif !important;
 }
 p {
   line-height: 24px !important;
@@ -240,7 +240,7 @@ input,
 }
 .css-b62m3t-container,
 text.CircularProgressbar-text {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", "Ubuntu", sans-serif !important;
   font-size: 14px !important;
 }
 /* ======================= End-Font-Family ======================= */
@@ -350,7 +350,13 @@ p {
   }
 }
 .leading {
-  line-height: 15px !important;
+  line-height: 26px !important;
+}
+.leading-h {
+  line-height: 60px !important;
+  @media (max-width: 640px) {
+    line-height: 44px !important;
+  }
 }
 // Common Part
 
@@ -450,7 +456,7 @@ input:focus-visible {
   background: var(--primary) !important;
   border: 1px solid var(--primary2);
   color: var(--white);
-  cursor:pointer;
+  cursor: pointer;
 }
 .primarybtn:hover {
   background: var(--primary);
@@ -461,7 +467,7 @@ input:focus-visible {
   background: transparent !important;
   border: 1px solid var(--primary2) !important;
   color: var(--primary2);
-  cursor:pointer;
+  cursor: pointer;
 }
 .primary2btn:hover {
   background: var(--primary) !important;
@@ -471,7 +477,7 @@ input:focus-visible {
   background: var(--secondary2) !important;
   border: 1px solid var(--secondary);
   color: var(--white);
-  cursor:pointer;
+  cursor: pointer;
 }
 .secondarybtn:hover {
   background: var(--secondary);
@@ -482,7 +488,7 @@ input:focus-visible {
   background: transparent !important;
   border: 1px solid var(--white);
   color: var(--white);
-  cursor:pointer;
+  cursor: pointer;
 }
 .whitebtn:hover {
   background: var(--white);
@@ -495,16 +501,41 @@ input:focus-visible {
   width: 100px !important;
   height: 55px !important;
 }
-.activetext {
-  color: var(--tertiary);
+.navbar .activetext {
+  color: var(--gray);
 }
-.active {
+.navbar .active {
   color: var(--primary2);
+}
+.navbar .dropdown_out{
+  opacity: 0;
+  scale: 0.7;
+  display: none;
+}
+.navbar .dropdown{
+  opacity: 1;
+  scale: 1;
+  display: grid;
+  transition: all 0.6s ease;
+  position: absolute !important;
+  min-width: 105px !important;
+  padding: 15px 10px 6px 10px;
+  top: 50px;
+  left: -9px;
+  z-index: 99;
+  border-radius: 5px;
 }
 /* ======================= End-Navbar ======================= */
 
 /* ======================= Start-Components ======================= */
 .hero_img {
   height: 400px !important;
+  @media (max-width: 640px) {
+    height: 280px !important;
+  }
+}
+.bg_hero {
+  background: url('https://www.primefaces.org/cdn/primereact/images/layout/pattern.png'),
+    radial-gradient(50% 50% at center top, #e9e7fd -50%, #fff 100%) !important;
 }
 /* ======================= End-Components ======================= */
